# upapasta

./: .env.example  .gitguardian.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  GEMINI.md  INSTALL.md  MANIFEST.in  MySeries.nfo  README.md  README.pt-BR.md  RESPOSTA.md  TODO.md  checklist.md  main.py  makerar.py  original_file.txt.nfo  pesto_roadmap.md  pyproject.toml  requirements.txt  temp_test.nzb.upapasta-state.json  test_folder_obfuscation_dir.nfo  test_hardlinks_dir.nfo  test_revert_skip_upload.nfo  upapasta.spec  upfolder.py
.github/workflows/: ci.yml  publish.yml
.venv_test/: pyvenv.cfg
8mfoubahiwl7dj0/0epgxqrmpawedh8gpmmx8a9fvk07/: imzhg01dvthz.txt
docs/: FAQ.md  TROUBLESHOOTING.md  TUI_ROADMAP.md
docs/man/: upapasta.1
docs/pt-BR/: CHANGELOG.md  DOCS.md  FAQ.md  INSTALL.md  TODO.md  TROUBLESHOOTING.md
examples/: post_upload_debug.sh
examples/hooks/: example_hook.py
scripts/: build_release.py  check_header.py  final_validate_obfuscation.py  gen_nested_test.py  usenet_backup3-skip-rar.py
src/upapasta/: main.py  makepar.py
test_file/: video.nfo
tests/: conftest.py  test_catalog.py  test_cleanup.py  test_cli_validation.py  test_coverage.py  test_error_paths.py  test_filepath_format.py  test_folder_obfuscation.py  test_hooks.py  test_i18n.py  test_main_dispatch.py  test_make7z.py  test_makepar.py  test_nested_paths.py  test_nfo_skip_upload.py  test_nfo_template.py  test_nntp_test.py  test_nzb_verify.py  test_obfuscation.py  test_obfuscation_hardlinks.py  test_obfuscation_integrity.py  test_obfuscation_nested.py  test_orchestrator.py  test_orchestrator_dryrun_matrix.py  test_password_flag.py  test_phase2.py  test_phase3.py  test_pipeline.py  test_process.py  test_rar_flag.py  test_rar_flag_comprehensive.py  test_rar_integration.py  test_rename_extensionless.py  test_resources.py  test_sab_compat_smoke.py  test_season_obfuscation_integration.py  test_skiprar_nested.py  test_tmdb.py  test_tools.py  test_tui_config.py  (+3 more)
tests/tui/: test_catalog_index.py  test_dashboard.py  test_external_nzb.py  test_fs_scanner.py  test_status.py  test_tui_app.py  test_tui_labels.py  test_upload_screens.py
upapasta/: __init__.py  __main__.py  _pipeline.py  _process.py  _progress.py  _webhook.py  catalog.py  cli.py  config.py  hooks.py  i18n.py  indexer.py  main.py  make7z.py  makepar.py  makerar.py  nfo.py  nntp_test.py  nzb.py  orchestrator.py  par_utils.py  profiles.py  resources.py  tmdb.py  tools.py  tui_config.py  tui_widgets.py  ui.py  upfolder.py  watch.py
upapasta/locale/: Makefile  TRANSLATORS  upapasta.pot
upapasta/locale/en/LC_MESSAGES/: upapasta.mo  upapasta.po
upapasta/locale/pt_BR/LC_MESSAGES/: upapasta.mo  upapasta.po
upapasta/tui/: __init__.py  app.py  catalog_index.py  external_nzb.py  fs_scanner.py  status.py
upapasta/tui/screens/: confirm.py  nzb_viewer.py  pattern_select.py  upload_progress.py
upapasta/tui/widgets/: __init__.py  dashboard.py  file_tree.py  status_bar.py  upload_panel.py
