[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upapasta"
version = "0.24.3"
description = "Ferramenta CLI para upload automatizado em Usenet com RAR, PAR2 e nyuu"
authors = [{name = "franzopl", email = "franzopl@pm.me"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["upapasta*"]

[project.scripts]
upapasta = "upapasta.main:main"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
