[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upapasta"
version = "0.34.2"
description = "Ferramenta CLI para upload automatizado em Usenet com RAR, PAR2 e nyuu"
authors = [{name = "franzopl", email = "franzopl@pm.me"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["usenet", "nntp", "upload", "par2", "rar", "nzb", "nyuu"]
dependencies = [
    "rich>=13.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/franzopl/upapasta"
Repository = "https://github.com/franzopl/upapasta"
Changelog = "https://github.com/franzopl/upapasta/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["upapasta*"]

[tool.setuptools.package-data]
"upapasta" = ["locale/*/LC_MESSAGES/upapasta.mo", "locale/*/LC_MESSAGES/upapasta.po"]

[project.scripts]
upapasta = "upapasta.main:main"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -m 'not slow'"
markers = ["slow: testes de integração pesados (execute com -m slow)"]
